--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "social-network-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Joseph-D98/social-network-api/issues"
   },
-  "homepage": "https://github.com/Joseph-D98/social-network-api#readme"
+  "homepage": "https://github.com/Joseph-D98/social-network-api#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.10.8"
+  }
 }
